k8s/django-service.yml
apiVersion: v1
kind: Service
metadata:
    name: django-service
spec:
    type: NodePort
    selector:
        app: django-deployment
    ports:
        - protocol: TCP
          port: 8000
