k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
    name: postgres-service
spec:
    type: ClusterIP
    selector:
        app: postgres
    ports:
        - protocol: TCP
          port: 5432
